Fix map height on small devices

--- a/source/stylesheets/style.css.scss
+++ b/source/stylesheets/style.css.scss
@@ -14,6 +14,7 @@ body {
     border: 1px solid #ddd;
     width: 100%;
     height: 100%;
+    min-height: 20em;
   }
 }
 
